docs: improve contributing guide for docs

--- a/docs/_static/css/citation.css
+++ b/docs/_static/css/citation.css
@@ -1,5 +1,5 @@
 /* make citations muted and smaller */
-.citation {
+.citation, .footnote {
     font-size: var(--pst-font-size-milli);
     font-weight: var(--pst-font-weight-caption);
     color: var(--pst-color-text-muted);
@@ -7,7 +7,7 @@
 }
 
 /* add horizontal rule */
-.citation-list {
+.citation-list, .footnote-list {
     margin-top: var(--pst-font-size-base);
     margin-bottom: var(--pst-font-size-base);
     padding-top: var(--pst-font-size-base);
